src/assets/CommonFont.css
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
.font-14 {
  font-size: 14px;
  font-family: "source-serif-pro-semibold";
  color: #1e0627;
}
.font-16 {
  font-size: 16px;
  font-family: "source-serif-pro-semibold";
  color: #1e0627;
}

.font-20 {
  font-family: "source-serif-pro-semibold";
  font-size: 20px;
  color: #f7f7f4;
}


.font-24{

  font-size: 24px;
  font-family: "Lato", sans-serif;
  color: #1e0627;
  font-weight: bold;
}



.font-18{

  font-size: 18px;
  font-family: "Lato", sans-serif;
  color: #5d5d5d;
  font-weight: 700;
}
.font-133 {
  font-size: 13px;
  font-family: "Lato", sans-serif;
  color: #878787;
  /* font-weight: bold; */
}

.font-13 {
  font-size: 13px;
  font-family: "Lato", sans-serif;
  color: #ff0053;
  font-weight: bold;
  text-transform: uppercase;
}


.font-15{
  color:#52525B;

  font-size: 15px;
  font-family: "Lato", sans-serif;
  line-height: 22px;
}
.para {
  font-size: 13px;
  font-family: lato;
  color: #878787;
}
.head-cat {
  color: #717171;
  font-size: 14px;
  font-family: lato;
}
.head-navs {
  color: #1a1a1a;
  font-size: 14px;
  font-family: lato;
}
.heads {
  font-size: 20px;
  color: #1e0627;
  font-family: lato;
  font-weight: 700;
}
.see-all {
  font-size: 14px;
  font-family: lato;
  color: #ff0053;
  font-weight: 700;
}
.footer-links {
  font-size: 14px;
  font-family: "Lato",sans-serif;
  line-height: 15px;
  color: #52525B;
}
.footer-heads {
  font-size: 13px;
  font-family: "Lato",sans-serif;
  color: #FF0053;
  font-weight: bold;
  text-transform: uppercase;
}
.fontCustom {
  font-family: "source-serif-pro-semibold";
}

